k8s/backend/overlays/dev/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
spec:
  rules:
    - host: ${APP_NAME}.dev.apps.bsci.com
      http:
        paths:
          - path: /
            backend:
              serviceName: ${APP_NAME}-svc
              servicePort: 3000
